# LuxGI

./: Chinese.md  English.md  README.md  gen_build_win.bat
Code/: CMakeLists.txt  resource.h
Code/Game/src/: Game.cpp
Code/Maple/: CMakeLists.txt
Code/Maple/lib/OpenFBX/: CMakeLists.txt
Code/Maple/lib/SPIRV-Cross/: CMakeLists.txt  spirv_glsl.hpp
Code/Maple/lib/glad/: CMakeLists.txt
Code/Maple/lib/imgui/: CMakeLists.txt
Code/Maple/lib/imgui/src/: ImCurveEdit.h  ImGuiEnttEditor.hpp  ImGuizmo.cpp  ImGuizmo.h  ImSequencer.cpp  ImSequencer.h  Sequentity.h  cimgui.cpp  imconfig.h  imgui.cpp  imgui.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengles2.cpp  imgui_impl_opengles2.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_internal.h  imgui_iterator.inl  imgui_notify.h  imgui_widgets.cpp  imgui_widgets_user.cpp  imgui_widgets_user.h  implot.h
Code/Maple/lib/libacc/: LICENSE.txt  README.md  bvh_tree.h  defines.h  kd_tree.h  primitives.h
Code/Maple/lib/nativefiledialog/: CMakeLists.txt
Code/Maple/lib/nativefiledialog/src/: nfd_zenity.c
Code/Maple/lib/noise/: CMakeLists.txt  generate_blue_noise.cpp  generate_blue_noise.h
Code/Maple/lib/opengl/: CMakeLists.txt
Code/Maple/lib/scope_guard/: scope_guard.hpp
Code/Maple/lib/spdlog/: CMakeLists.txt
Code/Maple/lib/stb_image/: CMakeLists.txt
Code/Maple/lib/tinyobjloader/: CMakeLists.txt
Code/Maple/lib/tracer/: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  Doxyfile.in  LICENSE  README.md  TracerConfig.cmake  appveyor.yml  checkFormat.sh  setupHooks.sh  travisRun.sh
Code/Maple/lib/tracer/cmake/: FindDLFCN.cmake  FindExecinfo.cmake  FindLibBFD.cmake  FindLibELF.cmake  FindLibUnwind.cmake
Code/Maple/lib/tracer/gitHooks/: pre-commit
Code/Maple/lib/tracer/src/: Frame.hpp  PrinterContainer.cpp  PrinterContainer.hpp  Tracer.cpp  Tracer.hpp  TracerHandler.cpp  TracerHandler.hpp
Code/Maple/lib/tracy/: CMakeLists.txt
Code/Maple/src/: Application.cpp  Application.h  Main.h
Code/Maple/src/Devices/: Input.cpp  Input.h  KeyCodes.h  Mouse.cpp  Mouse.h
Code/Maple/src/Engine/: AnimationSystem.h  BlueprintSystem.h  Buffer.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  CaptureGraph.h  Core.cpp  Core.h  GBuffer.cpp  GBuffer.h  JobSystem.cpp  JobSystem.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Profiler.h  Timestep.h  Vertex.h
Code/Maple/src/Engine/DDGI/: DDGIRenderer.cpp  DDGIRenderer.h  DDGIVisualization.cpp  DDGIVisualization.h  DFAO.cpp  DFAO.h  GlobalDistanceField.cpp  GlobalDistanceField.h  GlobalSurfaceAtlas.cpp  GlobalSurfaceAtlas.h  MeshDistanceField.h  SDFBaker.cpp  SDFBaker.h  SurfaceAtlasTile.h
Code/Maple/src/Engine/Noise/: BlueNoise.cpp  BlueNoise.h
Code/Maple/src/Engine/Physics/: Collider.h  PhysicsWorld.h  RigidBody.h
Code/Maple/src/Engine/Raytrace/: AccelerationStructure.cpp  AccelerationStructure.h  RaytraceConfig.h  RaytraceScale.h  RaytracedReflection.cpp  RaytracedReflection.h  RaytracedShadow.cpp  RaytracedShadow.h  TracedData.h
Code/Maple/src/Engine/Renderer/: AtmosphereRenderer.cpp  AtmosphereRenderer.h  BindlessModule.cpp  BindlessModule.h  DeferredOffScreenRenderer.cpp  DeferredOffScreenRenderer.h  FinalPass.cpp  FinalPass.h  PrefilterRenderer.cpp  PrefilterRenderer.h  RenderGraph.cpp  RenderGraph.h  Renderer.cpp  Renderer.h  RendererData.h  ShadowRenderer.cpp  ShadowRenderer.h  SkyboxRenderer.cpp  SkyboxRenderer.h
Code/Maple/src/Engine/VXGI/: Voxelization.h
Code/Maple/src/Event/: Event.h  EventDispatcher.cpp  EventDispatcher.h  EventHandler.cpp  EventHandler.h  WindowEvent.cpp  WindowEvent.h
Code/Maple/src/IO/: FBXLoader.cpp  FBXLoader.h  File.cpp  File.h  GLTFLoader.cpp  GLTFLoader.h  IResource.h  Image.cpp  Image.h  ImageLoader.cpp  ImageLoader.h  Loader.cpp  Loader.h  MeshResource.cpp  MeshResource.h  OBJLoader.cpp  OBJLoader.h  Serialization.cpp  Serialization.h
Code/Maple/src/ImGui/: ImGuiHelpers.cpp  ImGuiHelpers.h  ImGuiSystem.cpp  ImGuiSystem.h  ImNotification.cpp  ImNotification.h
Code/Maple/src/IoC/: DependencyBuilder.h  Registry.h  SystemAssembler.h  SystemBuilder.cpp  SystemBuilder.h  SystemInfo.h  Traits.h  TypeList.h
Code/Maple/src/Math/: BoundingBox.cpp  BoundingBox.h  BoundingSphere.cpp  BoundingSphere.h  Frustum.cpp  Frustum.h  MathUtils.h  OrientedBoundingBox.cpp  OrientedBoundingBox.h  Plane.h  Rect2D.cpp  Rect2D.h  Triangle.h
Code/Maple/src/Others/: Console.cpp  Console.h  HashCode.h  Randomizer.h  StringUtils.cpp  StringUtils.h  Timer.h
Code/Maple/src/RHI/: AccelerationStructure.cpp  AccelerationStructure.h  AccessFlags.h  BatchTask.cpp  BatchTask.h  BufferLayout.cpp  BufferLayout.h  BufferUsage.h  CommandBuffer.h  Definitions.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  FrameBuffer.h  GPUBuffer.cpp  GPUBuffer.h  GPUProfile.h  GraphicsContext.cpp  GraphicsContext.h  ImGuiRenderer.h  IndexBuffer.h  Pipeline.h  RenderDevice.cpp  RenderDevice.h  RenderPass.h  Shader.cpp  Shader.h  StorageBuffer.h  SwapChain.h  Texture.cpp  Texture.h  UniformBuffer.h  VertexBuffer.h
Code/Maple/src/RHI/ImGui/: VKImGuiRenderer.cpp  VKImGuiRenderer.h
Code/Maple/src/RHI/Vulkan/: Vk.cpp  Vk.h  VulkanBatchTask.cpp  VulkanBatchTask.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanComputePipeline.cpp  VulkanComputePipeline.h  VulkanContext.cpp  VulkanContext.h  VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFence.cpp  VulkanFence.h  VulkanFrameBuffer.cpp  VulkanFrameBuffer.h  (+22 more)
Code/Maple/src/Scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SystemBuilder.inl
Code/Maple/src/Shaders/: DeferredColor.frag  DeferredColor.vert  DeferredLight.frag  ScreenPass.frag  ScreenPass.vert  ScreenQuad.vert  Shadow.frag  Shadow.vert
Code/Maple/src/Window/: MessageBox.h  MessageBox_Linux.cpp  MessageBox_OSX.mm  MessageBox_Win.cpp  NativeWindow.cpp  NativeWindow.h  WindowWin.cpp  WindowWin.h
(+982 files in other folders)
